# nursery

./: .gitignore  DeployAWS.md  DeployGCP.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
agent/: pyproject.toml
agent/src/nursery_agent/: __init__.py  entrypoint.py  skills.py
agent/src/nursery_agent/backends/: __init__.py  echo.py  ollama.py
cli/: README.md  nursery
cli/src/nursery_cli/: __init__.py  _cli.py  lifecycle.py  preflight.py
docker/: README.md  build.sh
docker/base/: Dockerfile
docker/openclaw/: Dockerfile
docs/: architecture.md  identity.md  protocol.md  scenario-runtime.md  secrets.md
examples/agents/: example.yaml  gemma4-layla.yaml  hermes-layla.yaml  openclaw-layla.yaml  pi-layla.yaml  standalone-layla.yaml
examples/skills/current-time/: SKILL.md
examples/skills/weather-check/: SKILL.md
examples/souls/example/: SOUL.md
examples/souls/layla/: SOUL.md
hosts/: README.md
hosts/aws/terraform/: .gitignore  .terraform.lock.hcl  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
hosts/aws/terraform/bootstrap/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf  versions.tf
hosts/gcp/: bootstrap-vm.sh
hosts/gcp/terraform/: .gitignore  .terraform.lock.hcl  README.md  deploy.sh  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
hosts/gcp/terraform/bootstrap/: .gitignore  .terraform.lock.hcl  main.tf  outputs.tf  variables.tf  versions.tf
hosts/gcp/terraform/startup-scripts/: install-docker.sh
hosts/hermes/: README.md
hosts/openclaw/: README.md
hosts/pi/: README.md
hosts/standalone/: README.md
spec/: README.md  agent.schema.json
