[project]
name = "nursery-cli"
version = "0.1.0"
description = "Turnkey reproducible AI agents — CLI and schema validator."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Matthew Polonia" },
]
keywords = ["ai", "agents", "docker", "openclaw", "nursery"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.20",
]

[project.urls]
Homepage = "https://github.com/ZetiMente/nursery"
Repository = "https://github.com/ZetiMente/nursery"
Issues = "https://github.com/ZetiMente/nursery/issues"

[project.scripts]
nursery = "nursery_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli/src/nursery_cli"]

[tool.hatch.build.targets.wheel.force-include]
"spec/agent.schema.json" = "nursery_cli/agent.schema.json"

[tool.hatch.build.targets.sdist]
include = [
    "cli/",
    "agent/",
    "docker/",
    "spec/",
    "examples/",
    "README.md",
    "LICENSE",
    "SECURITY.md",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
